--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "Real estate app",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon dist/server.js",
-    "dev": "tsc -w & nodemon dist/server.js"
+    "build": "rimraf dist &&  npx tsc",
+    "server": "node dist/server.js",
+    "prestart": "npm run build",
+    "start": "node dist/server.js",
+    "preserve": "npm run build",
+    "serve": "npx tsc -w & nodemon dist/server.js"
   },
   "author": "Wisdom Elue",
   "license": "ISC",
@@ -24,6 +28,7 @@
     "mongoose": "^6.7.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
+    "rimraf": "^3.0.2",
     "slugify": "^1.6.5",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
