--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.9",
+    "@types/nodemailer": "^6.4.7",
     "colors": "^1.4.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
