--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^6.7.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
+    "redis": "^4.5.1",
     "rimraf": "^3.0.2",
     "slugify": "^1.6.5",
     "ua-parser-js": "^1.0.32",
