--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "redis": "^4.5.1",
     "rimraf": "^3.0.2",
     "slugify": "^1.6.5",
+    "typescript": "^4.9.4",
     "ua-parser-js": "^1.0.32",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
