--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 /node_modules
 .env
-utils/cryptr.ts
-dist/utils/cryptr.js
-/dist/utils/cryptr.js
-/utils/cryptr.ts
-cryptr.ts
+# utils/cryptr.ts
+# dist/utils/cryptr.js
+# /dist/utils/cryptr.js
+# /utils/cryptr.ts
+# cryptr.ts
 server/uploads
